Slightly modified Universe.

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,23 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <dependencies>
+    <dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-api</artifactId>
+  		<version>5.0.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.junit.vintage</groupId>
+  		<artifactId>junit-vintage-engine</artifactId>
+  		<version>4.12.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>uk.ac.rhul.cs.dice</groupId>
+  		<artifactId>agentcommon</artifactId>
+  		<version>1.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
   <build>
     <sourceDirectory>src/main/java</sourceDirectory>
     <resources>
@@ -42,11 +59,4 @@
       </plugin>
     </plugins>
   </build>
-  <dependencies>
-  	<dependency>
-  		<groupId>uk.ac.rhul.cs.dice</groupId>
-  		<artifactId>agentcommon</artifactId>
-  		<version>1.0.1-SNAPSHOT</version>
-  	</dependency>
-  </dependencies>
 </project>
