--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 			<groupId>uk.ac.rhul.cs.dice</groupId>
 			<artifactId>agentcommon</artifactId>
 			<version>1.0.1</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
